src/main/webapp/css/esup-stock.css
/* ... */
#jqueryFileTree {
	/*For multiselection with mouse to work, this element is "selectable" to allow selection starting from the edge*/
	width: 100%;
}

/* overlay for waiting */
.waiting-dialog .ui-dialog-titlebar-close {
    display: none;
}

.image-dialog .ui-dialog-titlebar-close {

}

.esupstock .disabled {
cursor: auto;
}

.esupstock #toolbar-refresh.enabled {
    background: url(/esup-filemanager/img/flaticons/refresh_24px.png) no-repeat center top;
}

.esupstock #toolbar-refresh.disabled {
    background: url(/esup-filemanager/img/flaticons/disabled/refresh_24px.png) no-repeat center top;
}

.esupstock #toolbar-thumbnail.enabled {
    background: url(/esup-filemanager/img/flaticons/thumbnails_24px.png) no-repeat center top;
}

.esupstock #toolbar-thumbnail.disabled {
    background: url(/esup-filemanager/img/flaticons/disabled/thumbnails_24px.png) no-repeat center top;
}

.esupstock #toolbar-list.enabled {
    background: url(/esup-filemanager/img/flaticons/list_24px.png) no-repeat center top;
}

.esupstock #toolbar-list.disabled {
    background: url(/esup-filemanager/img/flaticons/disabled/list_24px.png) no-repeat center top;
}

.esupstock #toolbar-new_folder.enabled {
	background: url(/esup-filemanager/img/flaticons/new_folder_24px.png) no-repeat center top;
}

.esupstock #toolbar-new_folder.disabled {
	background: url(/esup-filemanager/img/flaticons/disabled/new_folder_24px.png) no-repeat center top;
}

.esupstock #toolbar-new_file.enabled {
	background: url(/esup-filemanager/img/flaticons/new_file_24px.png) no-repeat center top;
}

.esupstock #toolbar-new_file.disabled {
	background: url(/esup-filemanager/img/flaticons/disabled/new_file_24px.png) no-repeat center top;
}


.esupstock #toolbar-download.enabled {
    background: url(/esup-filemanager/img/flaticons/download_24px.png) no-repeat center top;
}

.esupstock #toolbar-download.disabled {
    background: url(/esup-filemanager/img/flaticons/disabled/download_24px.png) no-repeat center top;
}

.esupstock #toolbar-zip.enabled {
    background: url(/esup-filemanager/img/flaticons/zip_24px.png) no-repeat center top;
}

.esupstock #toolbar-zip.disabled {
    background: url(/esup-filemanager/img/flaticons/disabled/zip_24px.png) no-repeat center top;
}

.esupstock #toolbar-copy.enabled {
    background: url(/esup-filemanager/img/flaticons/copy_24px.png) no-repeat center top;
}

.esupstock #toolbar-copy.disabled {
    background: url(/esup-filemanager/img/flaticons/disabled/copy_24px.png) no-repeat center top;
}

.esupstock #toolbar-cut.enabled {
    background: url(/esup-filemanager/img/flaticons/cut_24px.png) no-repeat center top;
}

.esupstock #toolbar-cut.disabled {
    background: url(/esup-filemanager/img/flaticons/disabled/cut_24px.png) no-repeat center top;
}

.esupstock #toolbar-paste.enabled {
    background: url(/esup-filemanager/img/flaticons/paste_24px.png) no-repeat center top;
}

.esupstock #toolbar-paste.disabled {
    background: url(/esup-filemanager/img/flaticons/disabled/paste_24px.png) no-repeat center top;
}

.esupstock #toolbar-rename.enabled {
    background: url(/esup-filemanager/img/flaticons/rename_24px.png) no-repeat center top;
}

.esupstock #toolbar-rename.disabled {
    background: url(/esup-filemanager/img/flaticons/disabled/rename_24px.png) no-repeat center top;
}

.esupstock #toolbar-delete.enabled {
    background: url(/esup-filemanager/img/flaticons/delete_24px.png) no-repeat center top;
}

.esupstock #toolbar-delete.disabled {
    background: url(/esup-filemanager/img/flaticons/disabled/delete_24px.png) no-repeat center top;
}

.esupstock #toolbar-list.enabled {
    background: url(/esup-filemanager/img/flaticons/list_24px.png) no-repeat center top;
}

.esupstock .toolbar-logout-div {
float: right;
margin: 5px 15px;
}

.esupstock .toolbar-logout-div .toolbar-item {
padding: 0;
}

.esupstock #toolbar-logout {
    background: url(/esup-filemanager/img/flaticons/disconnect.png) no-repeat;
    padding: 0 0 0 20px;
    color: red;
    font-weight: bold;
}

.esupstock .toolbar-item a {
padding: 24px 5px 0px 10px;
margin: 0px;
text-decoration: none;
color: #444444;
}

.esupstock a.enabled:hover {
    /*background-color: #fff !important;*/
    color: #000;
}

.esupstock .separator {
    border-right:2px solid #000;
    padding-right:10px;
}

.esupstock .qq-upload-button {
    	color: #000;
	/*background: none;*/
}

.esupstock .qq-upload-button-hover {
	color: #000;
	/*background-color: #fff !important;*/
}

.esupstock .disabled_upload {
	background: url(/esup-filemanager/img/flaticons/disabled/upload_24px.png) no-repeat top;
}

.esupstock .disabled_upload input {
cursor: auto !important;                                 
}

/* Common */

.esupstock #delete-confirm {
	display: none;
}

.esupstock #delete-confirm span {
	display: none;
	float: left;
	margin: 0 7px 20px 0;
}

.esupstock #delete-confirm-ok, .esupstock #waitingDialog, .esupstock #errorDialog {
	display: none;
}

.esupstock #delete-confirm-cancel {
	display: none;
}


/* Left tree area */

.esupstock #leftArea {
	width: 30%;
}

.esupstock #arborescentArea {
	background: none repeat scroll 0 0 #FFFFEE;
	height:320px;
}

.esupstock .arborescentAreaTitle {
	margin:0;
}

.esupstock .container #fileTree {
	height: auto;
	width: auto;
}

/* Browser Area */

.esupstock #browserArea {
	width: 67%;
	float: left;
	height:420px;
}

.esupstock .container #browserArea #browserMain {
	height:420px;
	display: inline-block;
}

.esupstock .readable, .writeable {
	display:none;
}



/* Details area */

.esupstock #ok_text, .esupstock #next_text, .esupstock #prev_text, .esupstock #diaporamaDivId, .esupstock #image_original_size {
	display: none;
}

.esupstock #image_width, .esupstock #image_height {
	display: inline;
}

.esupstock #detailArea {
	background:#FFFFEE none repeat scroll 0 0;
	overflow: hidden;
}

.esupstock #detailArea h3 {
	margin: 0;
}

.esupstock .details {
margin-left: 5px;
}
/* ... */

